--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,11 @@ jobs:
 
       - name: Setup influxdb
         run: |
+          source ./scripts/setup_influxdb.sh
           echo "::set-env name=INFLUXDB-V2_URL::$INFLUXDB_V2_URL"
           echo "::set-env name=INFLUXDB_V2_USERNAME::$INFLUXDB_V2_USERNAME"
           echo "::set-env name=INFLUXDB_V2_PASSWORD::$INFLUXDB_V2_PASSWORD"
-          'docker run -d --name influxdb -p 9999:9999 quay.io/influxdb/influxdb:2.0.0-beta'
+
 
       - name: Go fmt
         run: make fmt
