Resolved typo in ci.yml for INFLUXDB_V2_URL

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup influxdb
         run: |
           source ./scripts/setup_influxdb.sh
-          echo "::set-env name=INFLUXDB-V2_URL::$INFLUXDB_V2_URL"
+          echo "::set-env name=INFLUXDB_V2_URL::$INFLUXDB_V2_URL"
           echo "::set-env name=INFLUXDB_V2_USERNAME::$INFLUXDB_V2_USERNAME"
           echo "::set-env name=INFLUXDB_V2_PASSWORD::$INFLUXDB_V2_PASSWORD"
 
