--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,11 @@ jobs:
           go-version: 1.14
         id: go
 
+      - name: Setup terraform
+        uses: autero1/action-terraform@v0.1.0
+        with:
+          terraform_version: 0.13.1
+
       - name: Check out code into the Go module directory
         uses: actions/checkout@v1
 
